# BPCells

./: .Rbuildignore  .Rhistory  .clang-format  .dockerignore  .gitignore  .gitmodules  .lintr  404.html  CMakeLists.txt  COPYRIGHT  DESCRIPTION  DEVELOPING.md  LICENSE-MIT  NAMESPACE  NEWS.md  README.md  authors.html  cleanup  configure  configure.win  event.json  failing_test.R  index.html  index.md  op-tree-outline.md  pkgdown.yml  run_test.R  sct_counts.h5  search.json  sitemap.xml  test.r
.github/workflows/: check-standard-test.yaml  deploy-docs.yml  deploy-full-website.yml  deploy-reference.R  pypi.yml  r-test.yml
R/: BPCells-package.R  PackedInsertions-package.R  RcppExports.R  atacQC.R  atac_utils.R  clustering.R  data.R  errorChecking.R  fragments.R  geneScores.R  geneScores2.R  genomeAnnotations.R  matrix.R  normalizations.R  plots.R  singlecell_utils.R  trackplots.R  transforms.R  utils.R  zzz.R
articles/: index.html  pbmc3k.html
articles/web-only/: benchmarks.html  bitpacking-format.html  developer-notes.html  how-it-works.html  manuscript-draft.html  programming-efficiency.html  programming-philosophy.html
bench/: arm_read_test.R  arm_write_test.R  fragment_packing.R  fragment_packing_draft_v1.R  fragment_packing_draft_v2.R  insertions_profile_matrix.R  insertions_profile_matrix_commandline.R  matrix_ops_microbench.R  matrix_packing_draft_v1.R  x86_read_test.R
cpp/: CMakeLists.txt  bpcells-cpp  vendor
cpp/tests/: test-arrayIO.cpp  test-bp128.cpp  test-fragmentIO.cpp  test-fragmentUtils.cpp  test-matrixIO.cpp  test-matrixIterators.cpp  test-matrixMath.cpp  test-matrixTranspose.cpp  test-peakMatrix.cpp  utils-fragments.h
data/: human_gene_mapping.rda  mouse_gene_mapping.rda
data-raw/: human_gene_mapping.R  mouse_gene_mapping.R
designs/: iterative-lsi.md  sklearn-interface.md
docs/: 404.html  CHECKLIST.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: WindowsInstall.html  index.html  pbmc3k.html
docs/news/: index.html
docs/reference/: IterableFragments-methods.html  cluster.html  (+135 more)
man/: IterableFragments-methods.Rd  IterableMatrix-methods.Rd  LinearOperator-class.Rd  XPtrList-class.Rd  all_matrix_inputs.Rd  binarize.Rd  call_peaks_tile.Rd  checksum.Rd  cluster.Rd  cluster_membership_matrix.Rd  concat_dimnames.Rd  convert_matrix_type.Rd  convert_to_fragments.Rd  discrete_palette.Rd  distanceToNearestDirectional.Rd  draw_trackplot_grid.Rd  ensure_downloaded.Rd  extendGenomicRanges.Rd  extend_ranges.Rd  footprint.Rd  fragment_R_conversion.Rd  fragment_io.Rd  geneScoreTilesArchR.Rd  geneScoreWeightsArchR.Rd  gene_mapping.Rd  gene_matching.Rd  gene_region.Rd  gene_score_tiles.Rd  gene_score_tiles_archr.Rd  gene_score_weights_archr.Rd  gene_scores.Rd  genomic-ranges-like.Rd  genomic-ranges.Rd  getFootprints.Rd  import_matrix_market.Rd  iterable_matrix_md5sum.Rd  iterate_matrix.Rd  knn.Rd  knn_graph.Rd  length_distribution.Rd  (+69 more)
news/: index.html
pkgdown/: _pkgdown.yml
python/: .buildinfo  .gitignore  DEVELOP.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  python.html  search.html  searchindex.js  setup.py  tox.ini
python/_sources/: index.md.txt
python/_sources/api/: matrix.rst.txt
python/_sources/notebooks/: matrix_basics.md.txt
python/_static/: switcher.json
python/api/: fragments.html  matrix.html
python/docs/: .gitignore
python/docs/source/: conf.py  index.md  python.md  reference.rst
python/docs/source/_templates/autosummary/: class.rst
python/docs/source/api/: fragments.rst
python/docs/source/notebooks/: .gitignore  fragment_basics.md  matrix_basics.md
python/notebooks/: fragment_basics.html  matrix_basics.html
python/scripts/: build_docs.sh  clean_all.sh  install_ccache_linux.sh  install_deps.py  install_eigen.sh  install_hdf5.sh  install_highway.sh  install_highway_cmake.sh  run_tests.sh
python/src/: bindings.cpp  bpcells-cpp  fragments.cpp  fragments.hpp  matrix.cpp  matrix.hpp  py_interrupts.hpp  vendor
python/src/bpcells/: __init__.py  matrix.py
python/src/bpcells/experimental/: __init__.py  _slicing.py  fragments.py
python/tests/: conftest.py  test_matrix.py  test_real_data.py
python/tests/utils/: __init__.py
r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  check-wrapper.R  cleanup  cleanup.win  configure  configure.win  index.md
reference/: EXPERIMENTAL_open_matrix_dir.html  EXPERIMENTAL_write_matrix_dir.html  IterableFragments-methods.html  IterableFragments-misc-methods.html  IterableMatrix-matrixgenerics.html  IterableMatrix-methods-misc.html  IterableMatrix-methods.html  IterableMatrix-misc-methods.html  LinearOperator-class.html  LinearOperator-math.html  all_matrix_inputs.html  apply_by_col.html  apply_by_row.html  binarize.html  call_macs_peaks.html  call_peaks_macs.html  call_peaks_tile.html  canonical_gene_symbol.html  checksum.html  chrNames.html  cluster.html  cluster_cells_graph.html  cluster_graph.html  cluster_graph_louvain.html  cluster_graph_seurat.html  cluster_membership_matrix.html  colSums.html  collect_features.html  concat_dimnames.html  continuous_palette.html  convert_matrix_type.html  create_partial.html  demo_data.html  draw_trackplot_grid.html  ensure_downloaded.html  expm1,IterableMatrix-method.html  extend_ranges.html  footprint.html  fragment_R_conversion.html  fragment_io.html  (+101 more)
src/: Makevars  Makevars.in  R_array_io.cpp  R_array_io.h  R_interrupts.h  R_xptr_wrapper.h  RcppExports.cpp  bitpacking_io.cpp  clustering.cpp  fragment_io.cpp  fragment_utils.cpp  matrix_io.cpp  matrix_transforms.cpp  matrix_utils.cpp  md5.c  poisson_factorization.cpp  r_wrapper.cc  radix_sort.h
tests/: debug_test.cpp
tests/googletest/: CMakeLists.txt  README.md  test-arrayIO.cpp  test-bitpacking.cpp  test-fragmentIO.cpp  test-fragmentSeeking.cpp  test-fragmentUtils.cpp  test-matrixIO.cpp  test-matrixMath.cpp  test-matrixTranspose.cpp  test-peakMatrix.cpp  test-simdSleef.cpp  utils-fragments.h
tools/: avx-test.cpp  cxx17_filesystem.cc
vignettes/: pbmc3k.Rmd
windows_mat/: index_idx_offsets
(+598 files in other folders)
